# microsoft-ai-challenge-day

./: .env.sample  .gitignore  LICENSE  README.md  app.py  app4streamlitdeploy.py  backend.py  pyproject.toml  run_app.sh
